Fix dark mode for codeplay and questions

--- a/src/assets/codeplay/main.css
+++ b/src/assets/codeplay/main.css
@@ -183,41 +183,77 @@ div#canvas {
 }
 
 @media (prefers-color-scheme: dark) {
-  div#editor-area {
+  body[data-theme="auto"] div#editor-area {
     border: 1px solid rgb(32, 32, 32);
   }
   
-  div#output-area {
+  body[data-theme="auto"] div#output-area {
     background-color: rgb(85, 85, 85);
     color: rgb(44, 44, 44);
     border: 1px solid rgb(92, 92, 92);
   }
   
-  div#output-area div#output-message {
+  body[data-theme="auto"] div#output-area div#output-message {
     color:rgb(169, 169, 169);
   }
   
-  div#output-area pre {
+  body[data-theme="auto"] div#output-area pre {
     color:rgb(238, 238, 238);
   }
   
-  div#output-area input {
+  body[data-theme="auto"] div#output-area input {
     color:rgb(238, 238, 238);
   }
   
-  div#output-area .user-input {
+  body[data-theme="auto"] div#output-area .user-input {
     color:rgb(196, 196, 196);
   }
   
-  div#canvas-area {
+  body[data-theme="auto"] div#canvas-area {
     border: 1px solid rgb(37, 37, 37);
     background-color: transparent;
   }
   
-  div#canvas {
+  body[data-theme="auto"] div#canvas {
     border: 3px inset rgb(44, 44, 44);
     background-color: white;
   }
+}
+
+body[data-theme="dark"] div#editor-area {
+  border: 1px solid rgb(32, 32, 32);
+}
+
+body[data-theme="dark"] div#output-area {
+  background-color: rgb(85, 85, 85);
+  color: rgb(44, 44, 44);
+  border: 1px solid rgb(92, 92, 92);
+}
+
+body[data-theme="dark"] div#output-area div#output-message {
+  color:rgb(169, 169, 169);
+}
+
+body[data-theme="dark"] div#output-area pre {
+  color:rgb(238, 238, 238);
+}
+
+body[data-theme="dark"] div#output-area input {
+  color:rgb(238, 238, 238);
+}
+
+body[data-theme="dark"] div#output-area .user-input {
+  color:rgb(196, 196, 196);
+}
+
+body[data-theme="dark"] div#canvas-area {
+  border: 1px solid rgb(37, 37, 37);
+  background-color: transparent;
+}
+
+body[data-theme="dark"] div#canvas {
+  border: 3px inset rgb(44, 44, 44);
+  background-color: white;
 }
 
 @media only screen and (max-width: 768px) {
