--- a/src/exts/static/questions.css
+++ b/src/exts/static/questions.css
@@ -68,16 +68,16 @@
 
 @media (prefers-color-scheme: dark) {
 
-  .question .admonition-title {
+  body[data-theme="auto"] .question .admonition-title {
     background-color: rgb(32, 32, 56);
   }
   
-  .question .admonition {
+  body[data-theme="auto"] .question .admonition {
     background-color: rgb(var(--inf-offblack));
     border-color: hsl(211, 48%, 50%);
   }
   
-  .question .admonition-title:before {
+  body[data-theme="auto"] .question .admonition-title:before {
     color:#667081;
   }
 }
